updated code for bugs availibity, client, schedule,shift

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -157,7 +157,6 @@ table thead th {
   top: 17px;
   left: -25px;
 
-  z-index: 100;
   background-color: #fff;
 }
 .action-menu .btn:hover {
